@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- Add IMemoryReadFile interface which allows direct access to memory block used as file.
 - Add IReadFile::getType() interface to all users to find out what kind of class implements that interface.
 - .dae/Collada reader/writer now handle whitespace in texture-filenames with escape characters (handle them as xs:anyURI).
 - Add function string::insert.
